--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="article-preview">
                         <h2>What is a cat?</h2>
                         <p>The cat (Felis catus), also referred to as domestic cat or house cat, is a small domesticated
-                            carnivorous mammal. It is the only domesticated species of the family Felidae.
+                            carnivorous mammal. It is the only domesticated species of the family Felidae. Advances in archaeology and genetics have shown that the domestication of the cat occurred in the Near East around 7500 BC. It is commonly kept as a house pet and farm cat, but also ranges freely as a feral cat avoiding human contact.
                             <a href="https://en.wikipedia.org/wiki/Cat" title="Read more.">Read more.</a>
                         </p>
                     </div>
@@ -35,10 +35,7 @@
                         <p>BTS (방탄소년단), also known as the Bangtan Boys, is a South Korean boyband formed in 2010, but
                             with their debut on 2013. The band consists of Jin, Suga, J-Hope, RM, Jimin, V, and
                             Jungkook, who co-write or co-produce much of their material. Originally a hip hop group,
-                            they expanded their musical style to incorporate a wide range of genres, while their lyrics
-                            have focused on subjects including mental health, the troubles of school-age youth and
-                            coming of age, loss, the journey towards self-love, individualism, and the consequences of
-                            fame and recognition.
+                            they expanded their musical style to incorporate a wide range of genres, having meaningful lyrics.
                             <a href="https://en.wikipedia.org/wiki/BTS" title="Read more.">Read more about them.</a>
                         </p>
                     </div>
@@ -89,7 +86,7 @@
                     </figure>
                     <div class="article-preview">
                         <h2>Silent Hill</h2>
-                        <p>Silent Hill is a horror anthology media franchise centered on a series of survival horror games created by Keiichiro Toyama and published by Konami. The first four mainline video games in the series—Silent Hill, Silent Hill 2, Silent Hill 3, and Silent Hill 4: The Room—were developed by an internal group called Team Silent, a development staff within the former Konami subsidiary, Konami Computer Entertainment Tokyo.
+                        <p>Silent Hill is a horror anthology media franchise centered on a series of survival horror games created by Keiichiro Toyama and published by Konami. The first four mainline video games in the series—Silent Hill, Silent Hill 2, Silent Hill 3, and Silent Hill 4: The Room—were developed by an internal group called Team Silent.
                             <a href="https://en.wikipedia.org/wiki/Silent_Hill"
                                 title="Read more.">Read more.</a>
                         </p>
@@ -103,7 +100,7 @@
                     </figure>
                     <div class="article-preview">
                         <h2>Twilight</h2>
-                        <p>Twilight is a 2008 American romantic fantasy film directed by Catherine Hardwicke from a screenplay by Melissa Rosenberg, based on the 2005 novel of the same name by Stephenie Meyer. It is the first installment in The Twilight Saga film series. The film stars Kristen Stewart as Bella Swan, a teenage girl, and Robert Pattinson as Edward Cullen, a vampire. It focuses on the development of Bella and Edward's relationship and the subsequent efforts of Edward and his family to keep Bella safe from another coven of vampires.
+                        <p>Twilight is a 2008 American romantic fantasy film directed by Catherine Hardwicke from a screenplay by Melissa Rosenberg, based on the 2005 novel of the same name by Stephenie Meyer. It is the first installment in The Twilight Saga film series. The film stars Kristen Stewart as Bella Swan, a teenage girl, and Robert Pattinson as Edward Cullen, a vampire.
                             <a href="https://en.wikipedia.org/wiki/Twilight_(2008_film)"
                                 title="Read more.">Read more.</a>
                         </p>
